Changelog
=========

6.6-dev - (unreleased)
----------------------
* Feature: index all subjects/keywords lowercase
  [ghicaale refs #14384]
* Feature: store all subjects/keywords lowercase
  [ghicaale refs #14384]
* Upgrade step:
   - re-save (re-index 'Subject' index) all content types from the portal via a script from /www/0maintenance
   - this operation should be done via www8 instance, using intermediate transaction commits as it will be a very long process
   - ideally to be done outside EEA workin hours not to conflict with current editing
   - based on /www/0maintenance/.find-searchareas-using-subject report update all colelctions/facetednav to use lowercase subjects
   - [ghicaale refs #14384]
* Change: refactor marshaller.py to conform to eea.versions API changes,
  change tests to reflect the fact that random objects are no longer versionable by
  default
  [tiberich #14008]
* Upgrade step:
   - If #14383 is not closed, ask Alec/Antonio first to run this step
   - Within "Plone > Site setup > Add-ons" click on upgrade button available
     for EEA Content Types (must pe run under www8)
  [voineali refs #9552]
* Cleanup: Remove "eea.related_multimedia" viewlet
  [voineali refs #9552]
* Added upgrade to cleanup tags
  [ghicaale refs #14383]
* Feature: Removed lovely.memcached dependency
  [voineali refs #14343]

6.5 - (2013-04-17)
------------------
* Bug fix: fixed HISTORY.txt RST markup
  [ghicaale refs #14321]

6.4 - (2013-04-17)
------------------
* Bug fix: Fixed full screen mode for interactive maps
  [ichimdav #14215]
* Bug fix: Fixed wrong tal statement in translation template
  [prospchr refs #14270]

6.3 - (2013-03-15)
------------------
* Bug fix: Added a try except clause when trying to retrieve theme title for
  sameTypeByTheme to avoid future LookupError exceptions
  [ichimdav #14108]
* Bug fix: check if themes is available to correct a potential bug when calling
  sameTypeByTheme
  [ichimdav #14109]